# BitNet

./: .gitignore  CLAUDE.md  DECISIONS_ARCHIVE.md  README.md  STATE.md  aegis_system_prompt.txt  bitnet_inference.py  brew  inspect_and_patch_local_server.py  lessons.md
.claude/: settings.local.json
.ctxp/: ctxp.py
.ctxp/checkpoints/: log.txt
.ooda/: session_20260601_154232.md  session_20260601_154625.md
docs/: GPU_BENCHMARK_RESULTS.md  LAUNCH_INFERENCE_SERVER.md  OODA_LOG.md  lessons.md
docs/patch/: aegis_loop_fix.py  aegis_ooda_dots_patch.py  aegis_v31_patch.py  aegis_v31_patch.py.bak  aegis_workspace_patch.py  apply_aegis_patch.sh
scripts/: harold_aegis_local_recovery.sh
src/: README.md  aegis-cli-old.py  aegis_local_inference_server (10).py  aegis_local_inference_server.py  aegis_memory_state.json  aegis_server.py  inspect_and_patch_local_server.py  launch_aegis_cloud.sh  simulation.test.js
src/assets/: inspect_and_patch_local_server.py  photonx-jfs-ndgi.json
src/ndgi/: CLAUDE.md  CMakeLists.txt  __init__.py  aegis-cli-old,py  bitnet_ndgi_mysql.py  error_diagnoser.py  file_reader.py  memory-core-sample.json  ndgi_cli.cc  ndgi_coding_agent.py  ndgi_graph.cc  ndgi_graph.h  ndgi_graph_learn.py  ndgi_ingest.py  ndgi_init.py  ndgi_initial_state.json  ndgi_knowledge.py  ndgi_ops.py  ndgi_query.py  ndgi_setup.sh  ndgi_store.cc  ndgi_store.h  validate_and_commit.py  workspace_scanner.py
utils/: aegis-patch.py  aegis.sh  aegis.sh.bak  aegis_workspace_patch.py  bootstrap_aegis_sh  patch_stop_token.py  photnx-jfs-ndgi.json  run_inference_server.py.bak
(+41 files in other folders)
